# drupal-kit-rs

./: Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: main.yml
src/: client.rs  drupalkit_builder.rs  http_client.rs  lib.rs  simple_oauth.rs
src/auth/: basic.rs  bearer.rs  mod.rs  strategy.rs
src/simple_oauth/: access_token.rs  auth_strategy.rs  drupalkit.rs  grant.rs  mod.rs
tests/: auth_strategy.rs  core.rs  http_client.rs  simple_oauth.rs
