[package]
name = "drupal_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", optional = true }
http = "1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.37.0", features = ["macros"] }

[features]
default = []
consumer = []
simple-oauth = [ "consumer", "dep:chrono" ]
