[package]
name = "drupal_kit"
description = "Flexible Drupal HTTP client supporting a variety of popular contrib modules"
version = "0.3.3"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true }
http = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["sync"] }

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.37.0", features = ["macros"] }

[features]
default = []
consumer = []
simple-oauth = [ "consumer", "dep:chrono" ]
